STYLE: Kinda fixed the long card overflow issue

--- a/styles.css
+++ b/styles.css
@@ -219,15 +219,15 @@ p {
 
 .longCardBlock {
     width: 90%;
+    height: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 0.5rem;
     place-self: center;
 }
 
 .bottomBorder {
-    padding-bottom: 1.75rem;
+    padding-bottom: 2.75rem;
     border-bottom: rgba(231, 212, 212, 0.68) solid 1px;  
 }
 
